src/test/deca/context/valid/created/op-numbers-int.deca
{
	//entiers
	int a;
	int b;
	int c;
	
	3+4;
	-1 + 2;
	a = 3+2;
	a = 3 + 2 + 1;
	b = 1;
	c = 2;
	a = b + b;
	a = a + b;
}