src/test/deca/context/invalid/created/op-string.deca
{
	String s = "salut";
	int a = 3;
	s = a + s;
}